fix: prevent image stretching while maintaining original layout

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 /* Matrix Block */
 .matrix {
-  width: 800px;
+  width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
@@ -15,6 +15,8 @@
 
 .matrix__image {
   width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 .matrix__link {
@@ -30,7 +32,7 @@
 /* Todo App Block */
 .todo-app {
   display: block;
-  width: 800px;
+  width: 500px;
   margin: 0 auto 0;
 }
 
@@ -75,7 +77,7 @@
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
-  width: 400px;
+  width: 226px;
 }
 
 .task__input {
@@ -106,7 +108,7 @@
 
 .task__item_editing .task__input {
   display: inline-block;
-  width: 400px;
+  width: 224px;
 }
 
 .task__item_editing .task__label {
@@ -169,5 +171,5 @@
 }
 
 .add-task__input {
-  width: 500px;
+  width: 318px;
 }
